--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main>
-        <section class="hero section">
+        <section class="hero">
             <div class="container hero-container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero-btn">Замовити послугу</button>
@@ -94,33 +94,33 @@
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
-                    <li class="team-item">
-                        <div class="border">   
+                    <li class="team-item">  
                             <img class="team-img" src="./images/img(7).jpg" alt="Ігор Дем'яненко" width="270">
-                            <h3 class="team-item-title">Ігор Дем'яненко</h3>
-                            <p class="team-item-uptitle">Product Designer</p>
-                        </div>
+                            <div class="team-border">
+                                <h3 class="team-item-title">Ігор Дем'яненко</h3>
+                                <p class="team-item-uptitle">Product Designer</p>
+                            </div>
                     </li>
                     <li class="team-item">
-                        <div class="border">
                             <img class="team-img" src="./images/img(6).jpg" alt="Ольга Рєпіна" width="270">
-                            <h3 class="team-item-title">Ольга Рєпіна</h3>
-                            <p class="team-item-uptitle">Frontend Developer</p>
-                        </div>
+                            <div class="team-border">
+                                <h3 class="team-item-title">Ольга Рєпіна</h3>
+                                <p class="team-item-uptitle">Frontend Developer</p>
+                            </div>
                     </li>
                     <li class="team-item">
-                        <div class="border">
                             <img class="team-img" src="./images/img(5).jpg" alt="Микола Тарасов" width="270">
-                            <h3 class="team-item-title">Микола Тарасов</h3>
-                            <p class="team-item-uptitle">Marketing</p>
-                        </div>
+                           <div class="team-border">
+                                <h3 class="team-item-title">Микола Тарасов</h3>
+                                <p class="team-item-uptitle">Marketing</p>
+                           </div>
                     </li>
                     <li class="team-item">
-                        <div class="border">
                             <img class="team-img" src="./images/img(3).jpg" alt="Михайло Єрмаков" width="270">
-                            <h3 class="team-item-title">Михайло Єрмаков</h3>
-                            <p class="team-item-uptitle">UI Designer</p>
-                        </div>
+                            <div class="team-border">
+                                <h3 class="team-item-title">Михайло Єрмаков</h3>
+                                <p class="team-item-uptitle">UI Designer</p>
+                            </div>
                     </li>
                     </ul>
             </div>
