--- a/portfolio.html
+++ b/portfolio.html
@@ -44,17 +44,14 @@
         <section class="examples section">
             <div class="container">
                 <h1 class="hide">Приклади робіт</h1>
-                <div class="examples-container">
-                    <ul class="examples-list">
+                    <ul class="examples-list examples-container">
                         <li class="item"> <button type="button" class="examples-btn">Усі</button></li>
                         <li class="item" > <button type="button" class="examples-btn">Веб-сайти</button></li>
                         <li class="item"> <button type="button" class="examples-btn">Додатки</button></li>
                         <li class="item"> <button type="button" class="examples-btn">Дизайн</button></li>
                         <li class="item"> <button type="button" class="examples-btn">Маркетинг</button></li>
                     </ul>
-                </div>
-                <div class="examples-photo">
-                    <ul class="examples-list">
+                    <ul class="examples-list examples-photo">
                         <li class="examples-item">
                             <img class="examples-img" src="./images/vebsites.jpg" 
                             width="370" 
@@ -62,7 +59,6 @@
                             <div class="examples-text">
                                 <h2 class="examples-title">Технокряк</h2>
                                 <p class="examples-uptitle">Веб-сайт</p>
-                            </div>
                         </li>
                         <li class="examples-item">
                             <img class="examples-img" src="./images/basketbool.jpg" 
@@ -137,7 +133,6 @@
                             </div>
                         </li>
                     </ul>
-                </div>
             </div>
         </section>
 
